--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,28 @@
 *{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
     background-color: #1c1c18;
+    box-sizing: border-box;
+}
+body{
+    text-align: center;
+    color: white;
 }
 .container{
-    max-width: 1000px;
+    max-width: 1200px;
     display: flex;
     flex-flow: row wrap;
     margin: auto;
     color: white;
     justify-content: center;
-    padding: 50px;
+    padding: 40px;
+    gap: 10px;
 }
 .num{
     width: 100px;
     height: 100px;
     background-color: #706f6e;
+    text-align: center;
+    line-height: 100px;
+    color: #1c1c18;
 }
 .fizz{
     background-color: #c4bdad;
@@ -26,4 +32,5 @@
 }
 .fizzbuzz{
     background-color: #ab4c03;
+    color: #dcded5;
 }
